# saliency

./: README.md
blob_analysis/: CMakeLists.txt  CMakeLists.txt~  package.xml
blob_analysis/nodes/: MultImg.py  analyse_blobs.py  blob_detect.py
blob_analysis/sample_images/: README.txt~  data.txt  trajectory.fli
dynamic/: CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  mainpage.dox  manifest.xml.backup  package.xml  package.xml~  q_s_listen.launch~  setup.py  setup.py~
dynamic/include/: rosdy.h~  rosdyp.h~
dynamic/launch/: q_p_talk.launch  q_s_listen.launch
dynamic/msg/: Cap.msg
dynamic/scripts/: api  api~  dyn~  list  listen  listen~  list~  rat  rat~  talk  talk~
dynamic/srv/: Cap.srv
sscrovers_file_sequence_publisher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_file_sequence_publisher/include/: file_seq_pub_core.h  file_seq_pub_core.h~
sscrovers_file_sequence_publisher/launch/: sequence_publisher.launch  sequence_publisher.launch~
sscrovers_file_sequence_publisher/pmslam_test_data_2011_11_03_final/: .~lock.pmslam_test_data_2011_11_03.xlsx#  pmslam_test_data_2011_11_03.xlsx
sscrovers_pmslam/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam/docs/: tickets.ods
sscrovers_pmslam/launch/: sfm.launch  test.launch  test.launch~
sscrovers_pmslam_common/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_common/include/: afeature.h  feature.h  feature_vector.h  rover_state.h
sscrovers_pmslam_common/msg/: ControlVector.msg  DynamicArray.msg~  DynamicArrayFeature.msg  IDPoint.msg  IDPoint.msg~  MapOut_old.msg  PairedPoints3D.msg  RoverState.msg  SALPoint.msg  SALPoint.msg~  SALVector  SALVector.msg  SALVector.msg~  SPoint.msg  SPoint.msg~  Trajectory_old.msg  extraFeature.msg  extraFeature.msg~  extraFeatures.msg  extraFeatures.msg~  featureMap.msg  pairs.msg  pairs.msg~  unadjustedPairs.msg
sscrovers_pmslam_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_control/include/: ctrl_core.h  ctrl_core.h~  ctrl_core_dy.h  ctrl_core_dy.h~
sscrovers_pmslam_control/launch/: control.launch  control_dy.launch~
sscrovers_pmslam_datalogger/: CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_datalogger/include/: RoverState.h  datalogger_core.h
sscrovers_pmslam_datalogger/launch/: datalogger.launch  datalogger.launch~
sscrovers_pmslam_depth_perception/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_depth_perception/include/: dp_core_dy.h~  features_db.h
sscrovers_pmslam_depth_perception_saliency/: CMakeLists.txt  package.xml  package.xml~
sscrovers_pmslam_depth_perception_saliency/include/: direct_depth_dp.h  dp_core.h  dp_core.h~
sscrovers_pmslam_depth_perception_saliency/launch/: depth_perception.launch
sscrovers_pmslam_feature_add_saliency/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_feature_add_saliency/include/: direct_depth_dp.h  dp_core.h  dp_core.h~  dp_core_dy.h  es_core .h~  es_core.h  es_core.h~  ex_core.h  ex_core.h~  ptpairs.h  triangulate_dp.h
sscrovers_pmslam_feature_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_feature_detection/include/: fd_core.h  fd_core.h~  fd_core_dy.h  fd_core_dy.h~
sscrovers_pmslam_feature_detection/launch/: feature_detection.launch  feature_detection.launch~
sscrovers_pmslam_filter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_filter/include/: EIF.h  RoverState.h  ftr_core.h
sscrovers_pmslam_filter/launch/: slam_filter_dy.launch
sscrovers_pmslam_filter/launch/.svn/: all-wcprops  entries
sscrovers_pmslam_filter/src/sscrovers_pmslam_filter/: Landmark.cpp  ftr_core.cpp  ftr_core.cpp~  ftr_core_dy.cpp  information_filter_ftr.cpp
sscrovers_pmslam_filter_saliency/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_filter_saliency/include/: Landmark.h  Map.h  SURFPoint.h  ftr_core.h  ftr_core.h~  ftr_core_dy.h  ftr_core_dy.h~  information_filter_ftr.h  information_filter_ftr.h~
sscrovers_pmslam_outlier_rejection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_outlier_rejection_saliency/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_saliency_feature_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sscrovers_pmslam_sfm_saliency/: CMakeLists.txt  package.xml
sscrovers_pmslam_sfm_saliency /: CMakeLists.txt  CMakeLists.txt~  package.xml
sscrovers_pmslam_test/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
(+495 files in other folders)
